# capstone

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  railpack.json
__marimo__/session/: main.py.json
artifacts/: property_lightgbm.joblib
