[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.16.2",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "lightgbm>=4.5",
    "fastapi>=0.117.1",
    "uvicorn>=0.35.0",
]
